tests/expectations/compiler/function/scope_fail.out
Error [ETYC0372005]: Unknown variable `myGlobal`
    --> compiler-test:3:12
     |
   3 |     return myGlobal;
     |            ^^^^^^^^
